--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://hr-mgmt-system.herokuapp.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-iron-east-01.cleardb.net
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_34152cc25e288f5
+DB_USERNAME=b6bb55f99263ba
+DB_PASSWORD=945cd867
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
