--- a/.env
+++ b/.env
@@ -1,20 +1,25 @@
 APP_NAME=HRMS
-APP_ENV=production
-APP_KEY=
-APP_DEBUG=false
-APP_URL=https://hr-mgmt-system.herokuapp.com/
+APP_ENV=local
+#APP_ENV=production
+#APP_KEY=
+APP_KEY=base64:HSyEi+w1dVFmnX6w3JUaw0hbAfkwrcHI7jH0vyQy9FY=
+APP_DEBUG=true
+#APP_DEBUG=false
+APP_URL=http://localhost
+#APP_URL=https://hr-mgmt-system.herokuapp.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-DB_HOST=us-cdbr-iron-east-01.cleardb.net
+DB_HOST=127.0.0.1
+#DB_HOST=us-cdbr-iron-east-01.cleardb.net
 DB_PORT=3306
-#DB_DATABASE=hrms
-DB_DATABASE=heroku_34152cc25e288f5
-#DB_USERNAME=root
-DB_USERNAME=b6bb55f99263ba
-DB_PASSWORD=945cd867
+DB_DATABASE=hrms
+#DB_DATABASE=heroku_34152cc25e288f5
+DB_USERNAME=root
+#DB_USERNAME=b6bb55f99263ba
+DB_PASSWORD=
+#DB_PASSWORD=945cd867
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
