--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME=HRMS
 APP_ENV=production
-APP_KEY=
+#APP_KEY=
+APP_KEY=base64:HSyEi+w1dVFmnX6w3JUaw0hbAfkwrcHI7jH0vyQy9FY=
 APP_DEBUG=false
 APP_URL=https://hr-mgmt-system.herokuapp.com/
 
