--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_KEY=base64:HSyEi+w1dVFmnX6w3JUaw0hbAfkwrcHI7jH0vyQy9FY=
 APP_DEBUG=true
 #APP_DEBUG=false
 #APP_URL=http://localhost
-APP_URL=https://hr-mgmt-system.herokuapp.com/
+APP_URL=https://hr-magement-system.herokuapp.com/
 
 LOG_CHANNEL=stack
 
