--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=production
 #APP_KEY=
 APP_KEY=base64:HSyEi+w1dVFmnX6w3JUaw0hbAfkwrcHI7jH0vyQy9FY=
 APP_DEBUG=false
-APP_URL=https://hr-mgmt-system.herokuapp.com/
+APP_URL=https://hr-magement-system.herokuapp.com/
 
 LOG_CHANNEL=stack
 
