--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=HRMS
 APP_ENV=production
 APP_KEY=
 #APP_KEY=base64:HSyEi+w1dVFmnX6w3JUaw0hbAfkwrcHI7jH0vyQy9FY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://hr-magement-system.herokuapp.com/
 
 LOG_CHANNEL=stack
