--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=HRMS
 APP_ENV=production
-APP_KEY=
+APP_KEY=base64:BXrdjNd0/02eK0QMW1Ub3QSUTPvaj8r3/YrYp7tSU0o=
 #APP_KEY=base64:HSyEi+w1dVFmnX6w3JUaw0hbAfkwrcHI7jH0vyQy9FY=
 APP_DEBUG=true
 APP_URL=https://hr-magement-system.herokuapp.com/
