--- a/.env
+++ b/.env
@@ -26,14 +26,14 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 #DB_HOST=127.0.0.1
-DB_HOST=us-cdbr-iron-east-01.cleardb.net
+DB_HOST=us-cdbr-east-05.cleardb.net
 DB_PORT=3306
 #DB_DATABASE=hrms
-DB_DATABASE=heroku_34152cc25e288f5
+DB_DATABASE=heroku_119237596ef1b8b
 #DB_USERNAME=root
-DB_USERNAME=b6bb55f99263ba
+DB_USERNAME=b7ab7b0e61b8ed
 #DB_PASSWORD=
-DB_PASSWORD=945cd867
+DB_PASSWORD=a9e25366
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
