--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 APP_NAME=HRMS
 #APP_ENV=local
 APP_ENV=production
-APP_KEY=base64:BXrdjNd0/02eK0QMW1Ub3QSUTPvaj8r3/YrYp7tSU0o=
-#APP_KEY=base64:U6ASPD3DbfEISi6tpjL7ZIMiWjRQx/mJpkR676ZY/1Q=
-#APP_KEY=base64:HSyEi+w1dVFmnX6w3JUaw0hbAfkwrcHI7jH0vyQy9FY=
+APP_KEY=
+#APP_KEY=base64:BXrdjNd0/02eK0QMW1Ub3QSUTPvaj8r3/YrYp7tSU0o=
 APP_DEBUG=true
 #APP_DEBUG=false
 #APP_URL=http://localhost
