--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=HRMS
 #APP_ENV=local
 APP_ENV=production
-APP_KEY=
+APP_KEY=base64:+7Wk0W5I6Qcfa1gCVuZquuAWwsh2meHDLlSXs3x9Ifk=
 #APP_KEY=base64:BXrdjNd0/02eK0QMW1Ub3QSUTPvaj8r3/YrYp7tSU0o=
 APP_DEBUG=true
 #APP_DEBUG=false
