--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 APP_NAME=HRMS
-#APP_ENV=local
-APP_ENV=production
-APP_KEY=
-#APP_KEY=base64:ptxrwWAYhg70MxoRQMFmIz8WP8H3tZuNnBw+7yzT4E4=
+APP_ENV=local
+#APP_ENV=production
+APP_KEY=base64:ptxrwWAYhg70MxoRQMFmIz8WP8H3tZuNnBw+7yzT4E4=
 APP_DEBUG=true
 #APP_DEBUG=false
 #APP_URL=http://localhost
@@ -11,15 +10,15 @@ APP_URL=https://hr-magement-system.herokuapp.com/
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-DB_HOST=us-cdbr-east-05.cleardb.net
+DB_HOST=127.0.0.1
+#DB_HOST=us-cdbr-east-05.cleardb.net
 DB_PORT=3306
-#DB_DATABASE=hrms
-DB_DATABASE=heroku_7820d64e8a54652
-#DB_USERNAME=root
-DB_USERNAME=b52593ae3103e4
-#DB_PASSWORD=
-DB_PASSWORD=7bec3f94
+DB_DATABASE=hrms
+#DB_DATABASE=heroku_7820d64e8a54652
+DB_USERNAME=root
+#DB_USERNAME=b52593ae3103e4
+DB_PASSWORD=
+#DB_PASSWORD=7bec3f94
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
