--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=HRMS
 #APP_ENV=local
 APP_ENV=production
-APP_KEY=
-#APP_KEY=base64:ptxrwWAYhg70MxoRQMFmIz8WP8H3tZuNnBw+7yzT4E4=
+#APP_KEY=
+APP_KEY=base64:ptxrwWAYhg70MxoRQMFmIz8WP8H3tZuNnBw+7yzT4E4=
 APP_DEBUG=true
 #APP_DEBUG=false
 #APP_URL=http://localhost
