--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=HRMS
 APP_ENV=production
-#APP_KEY=
-APP_KEY=base64:ptxrwWAYhg70MxoRQMFmIz8WP8H3tZuNnBw+7yzT4E4=
+APP_KEY=
+#APP_KEY=base64:ptxrwWAYhg70MxoRQMFmIz8WP8H3tZuNnBw+7yzT4E4=
 #APP_KEY=base64:BXrdjNd0/02eK0QMW1Ub3QSUTPvaj8r3/YrYp7tSU0o=
 APP_DEBUG=true
 APP_URL=https://hr-magement-system.herokuapp.com/
