--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=HRMS
-#APP_ENV=local
-APP_ENV=production
-APP_KEY=
+APP_ENV=local
+#APP_ENV=production
+APP_KEY=base64:u1tWqaP6dAvvpOhinn/I3OCnw9b1lFf8HePRJx7uHMk=
 #APP_KEY=base64:ptxrwWAYhg70MxoRQMFmIz8WP8H3tZuNnBw+7yzT4E4=
 APP_DEBUG=true
 #APP_DEBUG=false
